# rusty_stuff

./: Cargo.toml
src/: 02_01_print_types.rs  02_02_variables.rs  02_03_datatypes.rs  02_04_constants.rs  02_05_shadowing.rs  02_06_inputs.rs  03_01_tuples.rs  03_02_arrays.rs  03_03_slices.rs  03_04_strings.rs  03_05_ifs.rs  03_06_loops.rs  03_07_functions.rs  03_08_enums.rs  03_09_enum_match.rs  03_10_matches.rs  03_11_enums2.rs  03_12_options.rs  03_13_if_lets.rs  03_14_options2.rs  03_15_while_let.rs  03_16_strings2.rs  03_17_struct.rs
