[package]
name = "rusty_stuff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "02_01_print_types"
path = "src/02_01_print_types.rs"

[[bin]]
name = "02_02_variables"
path = "src/02_02_variables.rs"

[[bin]]
name = "02_03_datatypes"
path = "src/02_03_datatypes.rs"

[[bin]]
name = "02_04_constants"
path = "src/02_04_constants.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
