[package]
name = "rusty_stuff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "02_01_print_types"
path = "src/02_01_print_types.rs"

[[bin]]
name = "02_02_variables"
path = "src/02_02_variables.rs"

[[bin]]
name = "02_03_datatypes"
path = "src/02_03_datatypes.rs"

[[bin]]
name = "02_04_constants"
path = "src/02_04_constants.rs"

[[bin]]
name = "02_05_shadowing"
path = "src/02_05_shadowing.rs"

[[bin]]
name = "02_06_inputs"
path = "src/02_06_inputs.rs"

[[bin]]
name = "03_01_tuples"
path = "src/03_01_tuples.rs"

[[bin]]
name = "03_02_arrays"
path = "src/03_02_arrays.rs"

[[bin]]
name = "03_03_slices"
path = "src/03_03_slices.rs"

[[bin]]
name = "03_04_strings"
path = "src/03_04_strings.rs"

[[bin]]
name = "03_05_ifs"
path = "src/03_05_ifs.rs"

[[bin]]
name = "03_06_loops"
path = "src/03_06_loops.rs"

[[bin]]
name = "03_07_functions"
path = "src/03_07_functions.rs"

[[bin]]
name = "03_08_enums"
path = "src/03_08_enums.rs"

[[bin]]
name = "03_09_enum_match"
path = "src/03_09_enum_match.rs"

[[bin]]
name = "03_10_matches"
path = "src/03_10_matches.rs"

[[bin]]
name = "03_11_enums2"
path = "src/03_11_enums2.rs"

[[bin]]
name = "03_12_options"
path = "src/03_12_options.rs"

[[bin]]
name = "03_13_if_lets"
path = "src/03_13_if_lets.rs"

[[bin]]
name = "03_14_options2"
path = "src/03_14_options2.rs"

[[bin]]
name = "03_15_while_let"
path = "src/03_15_while_let.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
